--- a/daysOfCode.html
+++ b/daysOfCode.html
@@ -11,7 +11,7 @@
                         
                     <div class="main">
                       <!--<h1>100 Days of Code</h1>-->	
-                      <img src="daysOfCode_Calculator.png" alt="100 Days of Code Rules" />
+                      <img src="computer_black.gif" alt="Crash Computer" class="center" />
                     </div>
                 </div>
             <script src="daysOfCode.js"></script>
