implementation second page

--- a/formPage.html
+++ b/formPage.html
@@ -4,14 +4,16 @@
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
             <title>100DaysOfCode 💻</title>
             <link rel="stylesheet" href="daysOfCode.css">
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=VT323">
         </head>
         <body>
                 <div class="wrapper">
                     <header></header>
                         
-                    <div class="photo">
-                      <!--<h1>100 Days of Code</h1>-->	
-                      <a href="formPage.html"><img src="computer_black.gif" alt="Crash Computer" class="center" /></a>
+                    <div class="content">
+                            <h1>When would you like to start the 100 days of code challenge ?</h1>
+                            <input type="date" id="date-input" name="date-input">
+                            <input type="submit" id="submit-date" value="Calculate">
                     </div>
                 </div>
             <script src="daysOfCode.js"></script>
