--- a/formPage.html
+++ b/formPage.html
@@ -11,9 +11,11 @@
                     <header></header>
                         
                     <div class="content">
-                            <h1>When would you like to start the 100 days of code challenge ?</h1>
+                        <h1>When would you like to start the 100 days of code challenge ?</h1>
+                        <div class="inputs"> 
                             <input type="date" id="date-input" name="date-input">
                             <input type="submit" id="submit-date" value="Calculate">
+                        </div>
                     </div>
                 </div>
             <script src="daysOfCode.js"></script>
