--- a/formPage.html
+++ b/formPage.html
@@ -14,7 +14,7 @@
                         <h1>When would you like to start the 100 days of code challenge ?</h1>
                         <div class="inputs"> 
                             <input type="date" id="date-input" name="date-input">
-                            <input type="submit" id="submit-date" value="Calculate">
+                            <input type="submit" id="calculate" value="Calculate" class="calculate">
                         </div>
                     </div>
                 </div>
