--- a/formPage.html
+++ b/formPage.html
@@ -13,7 +13,7 @@
                     <div class="content">
                         <h1>When would you like to start the 100 days of code challenge ?</h1>
                         <div class="inputs"> 
-                            <input type="date" id="date-input" name="date-input">
+                            <input type="date" id="dateInput" name="dateInput">
                             <input type="submit" id="calculate" value="Calculate" class="calculate">
                         </div>
                     </div>
