added the intro in the website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
             <link rel="stylesheet" href="daysOfCode.css">
         </head>
         <body>
+            <audio autoplay>
+    <source src="HDC.mp4" type="audio/mpeg">
+  </audio>
                 <div class="wrapper">
                     <header></header>
                         
